manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "demoaksv1-5da7"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "demoaksv1-5da7"
  template:
    metadata:
      labels:
        app: "demoaksv1-5da7"
    spec:
      containers:
        - name: "demoaksv1-5da7"
          image: "anoopsr1acr.azurecr.io/demoaksv1"
          ports:
          - containerPort: 80
