manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "demoaksv1-5da7"
    labels:
        app: "demoaksv1-5da7"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "demoaksv1-5da7"
