manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "demoaksv1-5da7"
    labels:
        app: "demoaksv1-5da7"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: demoaksv1aa2b-demoaksv1-5da7.2d5a6797b4f74cce80b7.eastus.aksapp.io
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                    name: "demoaksv1-5da7"
                    port:
                        number: 80
